[package]
name = "adaptive-xrbc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["fmt","env-filter"]}
tokio = { version = "1", features = ["full"]}
serde = { version = "1", features = ["derive"]}
serde_json = "1"
blake3 = "1"

